[B]Retrospect v5.1.3 - Changelog - 2019-12-20[/B]

This update mainly contains channel fixes for the SVT and UR Play channel.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
* Changed: added more view modes to the listings (Fixes #1268)

[B]Channel related[/B]
* Fixed: SVT "trailer" type was not recognised
* Fixed: Timestamp issue with SVT
* Fixed: SVT live streams (Fixes #1266)
* Fixed: UR Play did not list (Fixes #1267)