@@ -1,6 +1,6 @@
 {
   "id": "channel.se",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "textures": {
     "channel.se.oppetarkiv/oppetarkivfanart.jpg": "903bc29217bc40ecae55af098dc17e08",
     "channel.se.sbs/dplayfanart.jpg": "88f9bb12ca35416f66c2b4f2d27ab0d8",
